[gd_scene load_steps=36 format=3 uid="uid://bwey60o06aipr"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_wsuy8"]
[ext_resource type="Texture2D" uid="uid://cb2j1irsfpbji" path="res://art/CrystalWorld_v1.1/Sprites/Enemy04/enemy04_sheet.png" id="2_1ux48"]
[ext_resource type="Script" path="res://enemy/EnemyIdleState.gd" id="4_spnxs"]
[ext_resource type="Script" path="res://enemy/EnemyAttackState.gd" id="5_hmtdc"]
[ext_resource type="Script" path="res://enemy/EnemyAttack.gd" id="6_ify0q"]
[ext_resource type="Script" path="res://enemy/StateDebugLabel.gd" id="6_l8o2o"]
[ext_resource type="Script" path="res://enemy/EnemyHurtState.gd" id="6_uc2jw"]
[ext_resource type="Script" path="res://enemy/EnemyHitbox.gd" id="6_y5fb1"]
[ext_resource type="Script" path="res://char/Damageable.gd" id="7_da7a1"]
[ext_resource type="Script" path="res://char/CharacterStateMachine.gd" id="7_wb8pg"]
[ext_resource type="PackedScene" uid="uid://dwicfnq7fd827" path="res://char/healthbar.tscn" id="8_vyi4t"]
[ext_resource type="Script" path="res://char/State.gd" id="11_rasbb"]

[sub_resource type="Shader" id="Shader_1i6c0"]
code = "shader_type canvas_item;

uniform bool whiten = false;
uniform float mix_weight = 1.0;

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	if (whiten) {
		vec3 white = vec3(1, 1, 1);
		vec3 whitened_texture_rgb = mix(texture_color.rgb, white, mix_weight);
		COLOR = vec4(whitened_texture_rgb, COLOR.a);
	} else {
		COLOR = texture_color;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jsdwr"]
shader = SubResource("Shader_1i6c0")
shader_parameter/whiten = false
shader_parameter/mix_weight = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_476vx"]
radius = 6.0
height = 27.0

[sub_resource type="Animation" id="Animation_auy6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wpetc"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1ux48")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Attack:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_cv73n"]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1ux48")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [27, 26, 25]
}

[sub_resource type="Animation" id="Animation_blsep"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1ux48")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_8133h"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1ux48")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqswn"]
_data = {
"RESET": SubResource("Animation_auy6o"),
"attack": SubResource("Animation_wpetc"),
"die": SubResource("Animation_cv73n"),
"idle": SubResource("Animation_blsep"),
"walk": SubResource("Animation_8133h")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bqeh4"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8lnw2"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p8eqc"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_osxki"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e6dd7"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_8pjfu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_p8eqc")
blend_point_0/pos = -0.00225055
blend_point_1/node = SubResource("AnimationNodeAnimation_osxki")
blend_point_1/pos = 0.996999
blend_point_2/node = SubResource("AnimationNodeAnimation_e6dd7")
blend_point_2/pos = -0.9985
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_87dux"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cf226"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_34m1g"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aqkjl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61vje"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_j08f3"]
states/Start/position = Vector2(165, 86.8361)
states/attack/node = SubResource("AnimationNodeAnimation_bqeh4")
states/attack/position = Vector2(508, 21.8361)
states/die/node = SubResource("AnimationNodeAnimation_8lnw2")
states/die/position = Vector2(579, 100)
states/move/node = SubResource("AnimationNodeBlendSpace1D_8pjfu")
states/move/position = Vector2(337, 86.8361)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_87dux"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_cf226"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_34m1g"), "attack", "die", SubResource("AnimationNodeStateMachineTransition_aqkjl"), "move", "die", SubResource("AnimationNodeStateMachineTransition_61vje")]
graph_offset = Vector2(0, -110.164)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4h7y"]
size = Vector2(12, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_f2v8c"]
radius = 114.018

[node name="Enemy" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_jsdwr")
collision_layer = 4
script = ExtResource("1_wsuy8")
facing_left_direction = Vector2(-32.5, -31.5)
facing_right_direction = Vector2(-10.5, -31.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_476vx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-32.5, -31.5)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("2_1ux48")
centered = false
flip_h = true
hframes = 28

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_hqswn")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_hqswn")
}
tree_root = SubResource("AnimationNodeStateMachine_j08f3")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = 0.025

[node name="Damageable" type="Node" parent="." node_paths=PackedStringArray("healthbar")]
script = ExtResource("7_da7a1")
healthbar = NodePath("../HealthBar")
health = 50.0

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("6_l8o2o")
state_machine = NodePath("../CharacterStateMachine")
metadata/_edit_use_anchors_ = true

[node name="Attack" type="Area2D" parent="." node_paths=PackedStringArray("enemy", "enemy_hitbox", "attack_state")]
collision_layer = 0
collision_mask = 2
script = ExtResource("6_ify0q")
damage = 5.0
enemy = NodePath("..")
enemy_hitbox = NodePath("CollisionShape2D")
attack_state = NodePath("../CharacterStateMachine/Attack")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(-4, -1)
shape = SubResource("RectangleShape2D_v4h7y")
script = ExtResource("6_y5fb1")
facing_left_direction = Vector2(-4, -1)
facing_right_direction = Vector2(6, -1)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_f2v8c")

[node name="HealthBar" parent="." instance=ExtResource("8_vyi4t")]
offset_left = -17.0
offset_top = -23.0
offset_right = 19.0
offset_bottom = -19.0

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("7_wb8pg")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("attack_state")]
script = ExtResource("4_spnxs")
attack_state = NodePath("../Attack")
can_move = false

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "attack")]
script = ExtResource("5_hmtdc")
idle_state = NodePath("../Idle")
attack = NodePath("../../Attack")
can_move = false

[node name="Hurt" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "character_state_machine", "dead_state", "return_state")]
script = ExtResource("6_uc2jw")
damageable = NodePath("../../Damageable")
character_state_machine = NodePath("..")
dead_state = NodePath("../Dead")
return_state = NodePath("../Idle")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hurt"]
wait_time = 0.25
one_shot = true

[node name="Dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("11_rasbb")
can_move = false

[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="Attack" to="Attack" method="_on_body_entered"]
[connection signal="body_entered" from="Attack" to="CharacterStateMachine/Idle" method="_on_attack_body_entered"]
[connection signal="body_entered" from="AttackArea" to="CharacterStateMachine/Idle" method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="CharacterStateMachine/Idle" method="_on_attack_area_body_exited"]
[connection signal="timeout" from="CharacterStateMachine/Hurt/Timer" to="CharacterStateMachine/Hurt" method="_on_timer_timeout"]
